fixing TOC hiding behind slide
This goes together with the temporary fix that disabled TOC moving main slides over.

--- a/avalanche/css/screen.css
+++ b/avalanche/css/screen.css
@@ -381,7 +381,7 @@ body.expose .slide:hover aside.page_number {
   background-color: #eee;
   color: #000;
   border-right: 5px solid #ddd;
-  z-index: 63;
+  z-index: 100;
   height: 100%;
   overflow: hidden;
   top: 0;
